<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_wallpaper">add wallpaper</string>
    <string name="app_name">TutorsU</string>
    <string name="action_settings">Settings</string>
    <string name="please_reqiured_fields">Please enter the reqiured fields</string>
    <string name="hello_world">Hello world!</string>
    <string name="invalid_username_pwd">Invalid user name and password</string>
    <string name="login_phone_number">Login with Phote No.</string>
    <string name="login_fb">Login with with FB</string>
    <string name="app_id">900009210070238</string>
    <string name="title_activity_activity__splash">Activity_Splash</string>
    <string name="instant_connect">INSTANT CONNECT</string>
    <string name="insert_cell_no">INSERT CELL NO</string>
    <string name="title_activity_activity__mobile_varifecation">Activity_MobileVarifecation</string>
    <string name="enter_phone_number">Mobile No.</string>
    <string name="send_code">Send Code</string>
    <string name="veiy_code">Verify Code</string>
    <string name="verifecation">verifecation</string>
    <string name="sweet">Sweet</string>
    <string name="resend_code">Resend Code</string>
    <string name="skip">Skip</string>
    <string name="please_enter_phone">Please enter phone number</string>
    <string name="re_enter_code">Re-enter code</string>
    <string name="you_are_verified">You\'re verified, now finish setting up your profile</string>
    <string name="re_enter_or_request_new_code">Uh-oh, there seems to be an error, \n please re-enter the code \n or request new code</string>
    <string name="verif_code_has_been_sent">Verifecation code has been sent to your given number, please check your inbox</string>
    <string name="now_you_have_setup">Now you have setup your profile, \n add your payment info \n or save it for later</string>
    <string name="title_activity_activity__verify_code">Activity_VerifyCode</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="login_to_meet_tutor">Log in to meet your tutor</string>
    <string name="first_last_name">First Name/Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="forgot_your_pwd">Forgot your password</string>
    <string name="done">Done</string>
    <string name="add_another">ADD ANOTHER</string>
    <string name="trusted_tab_my_trusted">My Trusted</string>
    <string name="schedule_tab_my_tutions">Scheduled</string>
    <string name="history_tab_my_tutions">History</string>

    <string name="recommended_tab_my_trusted">Recommended</string>
    <string name="bookmark_tab_my_trusted">BookMark</string>
    <string name="current_tab_promotions">Current</string>


    <string name="add_payment_info">Add Payment Info</string>
    <string name="month_year">MM/YY</string>
    <string name="cvc">CVC</string>

    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="required">Required</string>

    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>

    <string name="expiry_date">Expiration Date</string>
    <string name="security_code">Security Code</string>
    <string name="nick_name">Nick Name</string>
    <string name="you_made_this_card_your_primary_card">You made this cad your primary card</string>
    <string name="do_you_want_to_make_this_your_primary_card">Do you want to make this your primary card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--&#160;&#160;-->
    <string name="title_activity_activity__verified">Activity_Verified</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string name="select_payment_method">Select the payment method \n best suited for you</string>
    <string name="card_no">Card No.</string>
    <string name="dotted_card_numbr">&#8226;&#8226;&#8226;&#8226; &#8226;&#8226;&#8226;&#8226; &#8226;&#8226;&#8226;&#8226; </string>
    <string name="primary_card">Primary Card</string>
    <string name="drawer_open">Open</string>
    <string name="accessibility_overflow">describtion</string>
    <string name="drawer_close">Close</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="trested_tutors_title">Tutors</string>
    <string name="trested_tutors_home">Home</string>
    <string name="my_family_title">My Family</string>
    <string name="favorite_locations_title">Favorite Locations</string>
    <string name="tutions_title">Tutions</string>
    <string name="profile_title">Create Profile</string>
    <string name="payments_title">Payments History</string>
    <string name="share_title">Share</string>
    <string name="promotions_title">Promotions</string>
    <string name="about_title">About Application</string>
    <string name="become_a_tutor_title">Become A Tutor</string>
    <string-array name="nav_options">
        <item>Home</item>
        <item>Trusted Tutors</item>
        <item>My Family</item>
        <item>Favorite Locations</item>
        <item>Tutions</item>
        <item>Profile</item>
        <item>Payments</item>
        <item>Share</item>
        <item>Promotions</item>
        <item>About</item>
        <item>Become a Tutor</item>
    </string-array>
    <!-- Lista de iconos de navegacion -->
    <array name="navigation_iconos">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_star</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_place</item>
        <item>@drawable/ic_action_labels</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_share</item>
    </array>
    <string name="title_activity_activity__payment_card_list">Activity_PaymentCardList</string>
    <string name="title_activity_activity__add__information">Activity_Add_Information</string>
    <string name="ok">OK</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="menu_name">Menu Name</string>
    <string name="title_activity_activity__tutors_map">Activity_TutorsMap</string>



</resources>